<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2Do</string>
    <string name="action_new">Új</string>
    <string name="action_save">Mentés</string>
    <string name="action_refresh">Frissítés</string>
    <string name="action_edit">Szerkesztés</string>
    <string name="title_activity_main">2Do</string>
    <string name="hello_world">Hello world!</string>
    <string name ="title_activity_add_task">Todo létrehozása</string>
    <string name ="title_activity_show_task">Todo</string>

    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="date">Határidő (dátum)</string>
    <string name="time">Határidő (óra)</string>
    <string name="created_at">Létrehozva</string>
    <string name="updated_at">Frissítve</string>
    <string name="create">Létrehozás</string>
    <string name="_date">dátum</string>
    <string name="_time">óra</string>
    <string name="_created_at">létrehozva</string>
    <string name="_updated_at">frissítve</string>
    
    <string name="in_charge">Felelős személy</string>
    <string name="user_hint">felelős személy</string>
    <string name="description_hint">leírás</string>
    <string name="title_hint">cím</string>
    
    <string name="dates">határidő (dátum, óra), létrehozva, frissítve</string>
    
    <string name="stored">tárolás helye</string>
    
</resources>
