<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    android:padding="@dimen/padding_default" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="textNoSuggestions|textMultiLine"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:hint="@string/description_hint"
            android:inputType="textNoSuggestions|textMultiLine"
            android:textSize="@dimen/text_normal_size" />

        <AutoCompleteTextView
            android:id="@+id/user"
            style="@style/CustomAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description"
            android:layout_below="@+id/description"
            android:layout_marginBottom="30dp"
            android:gravity="left"
            android:hint="@string/user_hint"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/date"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/date"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginBottom="15dp"
            android:focusable="false"
            android:gravity="left"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/time"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datePicker"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/time"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_marginBottom="15dp"
            android:focusable="false"
            android:gravity="left"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/created"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePicker"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/created_at"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createdPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/created"
            android:layout_alignRight="@+id/created"
            android:layout_below="@+id/created"
            android:focusable="false"
            android:gravity="left"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/updated"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createdPicker"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="34dp"
            android:gravity="left"
            android:text="@string/updated_at"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/updatedPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/updated"
            android:layout_alignRight="@+id/updated"
            android:layout_below="@+id/updated"
            android:focusable="false"
            android:gravity="left"
            android:textSize="@dimen/text_normal_size" />

        <Button
            android:id="@+id/btnCreate"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatedPicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/create"
            android:textSize="@dimen/text_big_size" />
    </RelativeLayout>

</ScrollView>