<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    android:background="@drawable/texture" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            style="@style/MyTextView"
            android:textSize="@dimen/text_big_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:text="@string/title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:textSize="@dimen/text_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="120dp"
            android:inputType="textNoSuggestions"
            android:gravity="left"
            android:hint="@string/description_hint" />

        <MultiAutoCompleteTextView
            android:id="@+id/user"
            style="@style/CustomAutoCompleteTextView"
            android:textSize="@dimen/text_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description"
            android:layout_alignRight="@+id/description"
            android:layout_below="@+id/description"
            android:layout_marginBottom="30dp"
            android:gravity="left"
            android:inputType="textNoSuggestions" 
            android:hint="@string/user_hint"/>

        <TextView
            android:id="@+id/date"
            style="@style/MyTextView"
            android:textSize="@dimen/text_big_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="34dp"
            android:gravity="left"
            android:text="@string/date"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/datePicker"
            android:textSize="@dimen/text_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="180dp"
            android:focusable="false"
            android:gravity="left" />
    
        <TextView
            android:id="@+id/created"
            style="@style/MyTextView"
            android:textSize="@dimen/text_big_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datePicker"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="34dp"
            android:gravity="left"
            android:text="@string/created_at"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/createdPicker"
            android:textSize="@dimen/text_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/created"
            android:layout_alignRight="@+id/created"
            android:layout_below="@+id/created"
            android:focusable="false"
            android:gravity="left" />
        
        <TextView
            android:id="@+id/updated"
            style="@style/MyTextView"
            android:textSize="@dimen/text_big_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createdPicker"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="34dp"
            android:gravity="left"
            android:text="@string/updated_at"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/updatedPicker"
            android:textSize="@dimen/text_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/updated"
            android:layout_alignRight="@+id/updated"
            android:layout_below="@+id/updated"
            android:focusable="false"
            android:gravity="left" />
        

        <Button
            android:id="@+id/btnCreate"
            android:textSize="@dimen/text_big_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatedPicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/create" />
    </RelativeLayout>

</ScrollView>